[tool.poetry]
name = "core"
version = "0.1.0"
description = ""
authors = ["lhj5772 <lhj5772@me.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
mongoengine = "^0.27.0"
pydantic = {extras = ["email"], version = "^2.6.2"}
sqlalchemy = "2.0.25"
pymysql = "^1.1.0"
mysqlclient = "^2.2.4"
bcrypt = "4.0.1"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
